third_party/move/move-compiler-v2/tests/reference-safety/freeze_mutable.exp

Diagnostics:
error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/freeze_mutable.move:9:9
   │
 8 │         let returned_ref = foo(result);
   │                            ----------- previously mutably borrowed here
 9 │         freeze(result);
   │         ^^^^^^^^^^^^^^ frozen here
10 │         returned_ref
   │         ------------ conflicting reference `returned_ref` used here
